# cpp_misc

./: .gitignore  CMakeLists.txt  compare.sh  generate_tests.sh  main.cpp  naive.cpp  std.in  test_endless.sh  testgen.cpp
crashing/: t1.in  t10.in  t11.in  t12.in  t13.in  t14.in  t15.in  t16.in  t17.in  t18.in  t19.in  t2.in  t20.in  t3.in  t4.in  t5.in  t6.in  t7.in  t8.in  t9.in
huge/: t1.in  t1.out  t10.in  t10.out  t100.in  t100.out  t11.in  t11.out  t12.in  t12.out  t13.in  t13.out  t14.in  t14.out  t15.in  t15.out  t16.in  t16.out  t17.in  t17.out  t18.in  t18.out  t19.in  t19.out  t2.in  t2.out  t20.in  t20.out  t21.in  t21.out  t22.in  t22.out  t23.in  t23.out  t24.in  t24.out  t25.in  t25.out  t26.in  t26.out  (+160 more)
small_tests/: t1.in  t10.in  t11.in  t12.in  t13.in  t14.in  t15.in  t16.in  t17.in  t18.in  t19.in  t2.in  t20.in  t3.in  t4.in  t5.in  t6.in  t7.in  t8.in  t9.in
smt/: t1.in  t1.out  t10.in  t10.out  t100.in  t11.in  t11.out  t12.in  t12.out  t13.in  t13.out  t14.in  t14.out  t15.in  t15.out  t16.in  t16.out  t17.in  t17.out  t18.in  t19.in  t2.in  t2.out  t20.in  t21.in  t22.in  t23.in  t24.in  t25.in  t26.in  t27.in  t28.in  t29.in  t3.in  t3.out  t30.in  t31.in  t32.in  t33.in  t34.in  (+77 more)
tests/: t1.in  t10.in  t11.in  t12.in  t13.in  t14.in  t15.in  t16.in  t17.in  t18.in  t19.in  t2.in  t20.in  t3.in  t4.in  t5.in  t6.in  t7.in  t8.in  t9.in
